# Predicting-Apple-stock-extreme-events

./: .gitignore  README.md  pyproject.toml
src/: data_processing.py  improvement.py  model_evaluation.py  random_forest.py  temporal_cnn.py
